package es.dam.prog.ivanvm.calculadora;

public class Operando {
    
}
